salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/Pipeline_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Weekly aggregated pipeline snapshot per Business Lead for trending and historical analysis.</description>
    <label>Pipeline Snapshot</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>