salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/Attainment_At_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Attainment_At_Snapshot__c</fullName>
    <description>QTD quota attainment percentage at the time of snapshot</description>
    <label>Attainment at Snapshot</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>