salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/BL_Commit_Amount__c.field-meta.xml
<CustomField>
    <fullName>BL_Commit_Amount__c</fullName>
    <description>Sum of ACV for opportunities where BL has committed to closing this quarter</description>
    <label>BL Commit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>