salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/BL_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>BL_Forecast_Amount__c</fullName>
    <description>Sum of BL forecasted amounts for the quarter</description>
    <label>BL Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>