salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/Business_Lead__c.field-meta.xml
<CustomField>
    <fullName>Business_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Business Lead (Opportunity Owner) this snapshot is for</description>
    <label>Business Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipeline_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>