salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/Opp_Count_Stage_1_2__c.field-meta.xml
<CustomField>
    <fullName>Opp_Count_Stage_1_2__c</fullName>
    <description>Count of opportunities in early stages (1-2)</description>
    <label>Opp Count (Early: 1-2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>