salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/Opp_Count_Stage_3_4__c.field-meta.xml
<CustomField>
    <fullName>Opp_Count_Stage_3_4__c</fullName>
    <description>Count of opportunities in mid stages (3-4)</description>
    <label>Opp Count (Mid: 3-4)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>