salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/Opp_Count_Stage_5_Plus__c.field-meta.xml
<CustomField>
    <fullName>Opp_Count_Stage_5_Plus__c</fullName>
    <description>Count of opportunities in late stages (5+)</description>
    <label>Opp Count (Late: 5+)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>