salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>The Sunday of the week this snapshot represents</description>
    <label>Snapshot Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>