salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/Total_Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Opp_Count__c</fullName>
    <description>Total count of active opportunities at snapshot time</description>
    <label>Total Opp Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>