salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/Total_Pipeline_ACV__c.field-meta.xml
<CustomField>
    <fullName>Total_Pipeline_ACV__c</fullName>
    <description>Sum of ACV for all active opportunities owned by this BL at snapshot time</description>
    <label>Total Pipeline ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>