salesforce/force-app/main/default/objects/Pipeline_Snapshot__c/fields/Weighted_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Pipeline__c</fullName>
    <description>Sum of (ACV * Stage Probability) for all active opportunities</description>
    <label>Weighted Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>